difference of viewport performance between a model with modifiers and modifiers applied #59898

Closed
opened 2018-12-27 15:38:34 +01:00 by Lautaro Iglesias · 7 comments

System Information
Operating system: Windows 7
Graphics card: Nvidia GTX 1060
Blender Version: 2.80 Beta
Hash: e4dbfe0a98
Date: 2018-12-26

Description:

  • I have a vehicle model with different parts and modifiers.
  • When i move the vehicle in the viewport (parented to a box) i get 2 o 3 FPS but if i applied all the modifiers i get 30 FPS despite having the same number of polygons.
  • In Blender 2.79, i can move the model with modifiers without problem at 30 fps.

Exact steps for others to reproduce the error:
In the attached file you will see both models, one with modifiers and the other one with the modifiers applied. Move the different wire boxes to compare the fps rates. (the file is heavy although i erase some parts, because if i simplified even more, the problem start to disappearing).

Thanks.

system-info.txt Bug_report.blend

System Information Operating system: Windows 7 Graphics card: Nvidia GTX 1060 Blender Version: 2.80 Beta Hash: e4dbfe0a98c1 Date: 2018-12-26 Description: - I have a vehicle model with different parts and modifiers. - When i move the vehicle in the viewport (parented to a box) i get 2 o 3 FPS but if i applied all the modifiers i get 30 FPS despite having the same number of polygons. - In Blender 2.79, i can move the model with modifiers without problem at 30 fps. Exact steps for others to reproduce the error: In the attached file you will see both models, one with modifiers and the other one with the modifiers applied. Move the different wire boxes to compare the fps rates. (the file is heavy although i erase some parts, because if i simplified even more, the problem start to disappearing). Thanks. [system-info.txt](https://archive.blender.org/developer/F6086014/system-info.txt) [Bug_report.blend](https://archive.blender.org/developer/F6086016/Bug_report.blend)

Added subscriber: @LautaroIglesias

Added subscriber: @LautaroIglesias

Added subscribers: @Sergey, @ZedDB

Added subscribers: @Sergey, @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2018-12-28 12:13:26 +01:00

@Sergey I think this should be depsgraph related, right? (The finished result should be cached)

But I guess that the performance drop might be related to OpenSubDiv too as the evaluation is slower.

@Sergey I think this should be depsgraph related, right? (The finished result should be cached) But I guess that the performance drop might be related to OpenSubDiv too as the evaluation is slower.

@ZedDB, not sure what you mean by "cache" exactly. In Blender terms it is not supposed to be cached. Is "just" things which are not tagged for update are not supposed to be re-evaluated, and previous evaluation result will be used.

The actual issue here is that such modifier stack is not supposed to be re-evaluated when object transform changes. More slow nature of OpenSubdiv just made the actual issue more obvious.

The root of the issue is the Mirror modifier which says "i do depend on transform of the object", even though actual modifier evaluation does not depend on it unless mirror object is set.

Fix is coming in a bit.

@ZedDB, not sure what you mean by "cache" exactly. In Blender terms it is not supposed to be cached. Is "just" things which are not tagged for update are not supposed to be re-evaluated, and previous evaluation result will be used. The actual issue here is that such modifier stack is not supposed to be re-evaluated when object transform changes. More slow nature of OpenSubdiv just made the actual issue more obvious. The root of the issue is the Mirror modifier which says "i do depend on transform of the object", even though actual modifier evaluation does not depend on it unless mirror object is set. Fix is coming in a bit.

P.S. Forgot to mention, the OpenSubdiv will "cache" topology, so its evaluation will become faster even in more tricky setup.

P.S. Forgot to mention, the OpenSubdiv will "cache" topology, so its evaluation will become faster even in more tricky setup.

This issue was referenced by e97700ef74

This issue was referenced by e97700ef748617705d3b97487a3193e73692293b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59898
No description provided.