Fix T59898: Slow modifier stack on trasnform